css/cover.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritence from `body` */
  background-color: #fff;
  border: 0;
}

canvas{
	margin-top:15px;
}

.btn{
    margin:5px;
}

.left {
    width: 200px;
}

.right {
    background-color: #E0E0E0;
    width: 200px;
}

.site-wrapper {
    margin: 0 auto;
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-image: url("../images/Gilman-close.jpeg");
  background-attachment:fixed;
  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;
  /*background-color: #333;*/
}
body {
  color: #fff;
  text-align: center;
  text-shadow: 0 1px 3px rgba(0,0,0,.75);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  min-height: 100%;
  z-index:1;
  position:relative;
}
.bg-site-wrapper {
  height:100%;
  width:100%;
  overflow:hidden;
  position:fixed;
  -moz-box-shadow: inset 0 0 200px rgba(0,0,0,1.0);
  -webkit-box-shadow: inset 0 0 200px rgba(0,0,0,1.0);
          box-shadow: inset 0 0 200px rgba(0,0,0,1.0);
  background: rgba(0,0,0, .5);
  z-index:0;
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 30px;
}


/*
 * Header
 */
.masthead-brand {
  margin-top: 10px;
  margin-bottom: 10px;
}

.masthead-nav > li {
  display: inline-block;
}
.masthead-nav > li + li {
  margin-left: 20px;
}
.masthead-nav > li > a {
  padding-right: 0;
  padding-left: 0;
  font-size: 16px;
  font-weight: bold;
  color: #fff; /* IE8 proofing */
  color: rgba(255,255,255,.75);
  border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
  background-color: transparent;
  border-bottom-color: #a9a9a9;
  border-bottom-color: rgba(255,255,255,.25);
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 700px) {
  .masthead-brand {
    float: left;
  }
  .masthead-nav {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: #999; /* IE8 proofing */
  color: rgba(255,255,255,.5);
}


/*
 * Affix and center
 */

@media (min-width: 700px) {
  /* Pull out the header and footer */
  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 700px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 700px;
  }
}


.textarea {
    border: none;
    overflow: auto;
    outline: none;

	height: 5em;
	width: 80%;

    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
	border-radius: 15px;
}

.alpha60 {
    /* Fallback for web browsers that don't support RGBa */
    background-color: rgb(0, 0, 0);
    /* RGBa with 0.6 opacity */
    background-color: rgba(0, 0, 0, 0.6);
    /* For IE 5.5 - 7*/
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
    /* For IE 8*/
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
}

.tweeter{
	width: 100%;
	height: 300px;
	border-top: 1px solid white;
	border-bottom: 1px solid white;
	overflow: scroll;
}

.tweet{
	width: 75%;
	border-bottom: 1px solid white;
	text-align: left;
}

.subtitle{
	font-size: 14px;
}

@media (min-width:768px) {
    .subtitle {
        font-size: 18px
    }
}

